upgrade all examples

--- a/Source/HelixToolkit.Wpf.SharpDX.Assimp/HelixToolkit.Wpf.SharpDX.Assimp.csproj
+++ b/Source/HelixToolkit.Wpf.SharpDX.Assimp/HelixToolkit.Wpf.SharpDX.Assimp.csproj
@@ -45,4 +45,5 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <Import Project="..\HelixToolkit.SharpDX.Assimp.Shared\HelixToolkit.SharpDX.Assimp.Shared.projitems" Label="Shared" />
 </Project>
